<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>space.arim.dazzleconf</groupId>
		<artifactId>dazzleconf-parent</artifactId>
		<version>1.3.0-SNAPSHOT</version>
	</parent>

	<artifactId>dazzleconf-ext-snakeyaml</artifactId>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<id>default-compile</id>
						<!-- Compile everything + module descriptor with Java 11 -->
						<configuration>
							<release>11</release>
						</configuration>
					</execution>
					<execution>
						<!-- Recompilation of almost everything for Java 8 -->
						<id>base-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<release>8</release>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation
						--add-exports
						space.arim.dazzleconf.ext.snakeyaml/space.arim.dazzleconf.ext.snakeyaml.ness=space.arim.dazzleconf
						--add-exports
						space.arim.dazzleconf.ext.snakeyaml/space.arim.dazzleconf.ext.snakeyaml.mooeypoo=space.arim.dazzleconf
						--add-exports
						space.arim.dazzleconf.ext.snakeyaml/space.arim.dazzleconf.ext.snakeyaml.arturekdev=space.arim.dazzleconf
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-invoker-plugin</artifactId>
				<configuration>
					<parallelThreads>3</parallelThreads>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>space.arim.dazzleconf</groupId>
			<artifactId>dazzleconf-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.33</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
		</dependency>
	</dependencies>
</project>